# twitch-notifications

./: .gitignore  AGENTS.md  README.md  codebook.toml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/.sqlx/: query-01018ff08983241748987603f5b273e58b494c6eb96145acb2b76c301bae9149.json  query-04528b62a09bf4e23457b9d1a9bc493aefaa40d7038943f7633d2ad52ab5dc12.json  query-0a6140c06d3501f0665cc63803646a692bf5545729aafce9ef40a10b8f49d43b.json  query-0b5fd98650a05859755ab6356b3c318b4c0a3c49e96d28b75f60c9be73af1497.json  query-0c24b32ac9ca6588c579e6b71482ff54042152b10af79f34c128d0b61085f99e.json  query-13ff0aedebec172fdc1c328b229d8bb45ef6085b1b1d921c2acc81286c93fc09.json  query-158ae0e6daa5930e53a70996524c4161b754f5679f2df1d8c10ef1240143ab0a.json  query-1704534fb6338611e0e6caa593a300f0bef6ebd6610aa0b6bfba095056b12630.json  query-18f27ae48755641644ac662d6c63e97e724cb23961515b6fb6c23d65c7fd2c49.json  query-194df6e28a171a725456e9c59f7b19ebf971d2295931fced30b85f76cf314e43.json  query-19e92e919aa44ddc903427615b95b5c475697188621d5755e4b72ea23c0a78a9.json  query-1a20f37ddc358c05cd751498618c06dbd79ca87faa8fae15d0f304a37ef13313.json  query-1da496b24c2d2828255a77884c0b26db81d388c1f8dc2ab9b389e5edce9e6bcd.json  query-1fa3c9056e9345cd46ac47708b0e08d826166578c5db53cc335cfbb59720153f.json  query-2a3157afdc0b8d90ae32a381a7891bf07355d56a853a5c7e2d9262f7a9d6c40f.json  query-338bc4725848524a07283c87c8c2a2808a50ff3751b11e984f73e6f039f96a2e.json  query-358ab8e1bd8de38572d1e2fb252c3e9ffe5bc73061f5c6941ed75199076de3dd.json  query-39ac898e246711c5fc97b835cb7a80d3dfa454759aec0c8ecac546c1f6ab797c.json  query-3b9c0d0c8f9ccbdbf29927d72b09417cc37af43b54701cbb13fe1ebd609b45fc.json  query-4046f8083c258249212ec26528d7dcc7bc7d1c048e5a086510f6fadb0fb8db43.json  query-406f28f024a03120d9cff9b2d90c7c6f5c5a8b889d3e57409ed70ae80b5587f1.json  query-4b7015c141ec6a328dcc978173c15dc7df409d246cd86ca135adb83c7af985cb.json  query-4d184ae815a1255d266c0f74af936b846b4a9c4bd8a969fd676e995c495f8a51.json  query-56cb71aad2d76dce3a7c82572b2d55099dac34e680185c8b2d9412c2d4e551fa.json  query-635bb9b61aacb0968c98d7722bb084b90d01d4ad7b52ea6bb586a15039bce96d.json  (+45 more)
backend/migrations/: 001_initial.sql  005_add_user_lang.sql  (+5 more)
(+107 files in other folders)
