[package]
name = "twitch-notifications"
version = "0.1.0"
edition = "2021"
authors = ["Twitch Notifications Team"]
description = "Twitch stream notifications service"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Rate limiting middleware (apply to public endpoints like /api/auth/login, /webhooks/twitch)
tower_governor = "0.4"
# For constructing custom HTTP error responses when a request is rate limited
http = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite", "migrate", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Authentication & Security
jsonwebtoken = "9"
bcrypt = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Twitch API
twitch_api = { version = "0.7", features = ["helix", "eventsub", "reqwest"] }
twitch_oauth2 = { version = "0.12", features = ["reqwest"] }

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }

# Discord
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }

# Configuration
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
url = "2"
urlencoding = "2.1"
base64 = "0.22"
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4"
time = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
